--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "checkin",
+  "name": "@point-hub/checkin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,13 +10,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@point-hub/vue-cookie": "^0.1.0",
+    "@point-hub/vue-google-maps": "^0.1.3",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -36,6 +41,7 @@
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
   },
