--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@point-hub/vue-google-maps": "^0.1.3",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
+    "mobile-device-detect": "^0.4.3",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
