--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@point-hub/checkin",
-  "version": "0.4.4",
+  "version": "0.4.5",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "serve:https": "vue-cli-service serve --https",
-    "build": "yarn;vue-cli-service build --dest build/0.4.4",
+    "build": "yarn;vue-cli-service build --dest build/0.4.5",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
@@ -15,6 +15,7 @@
     "@point-hub/vue-google-maps": "^0.1.3",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.4",
     "lodash": "^4.17.20",
     "mobile-device-detect": "^0.4.3",
     "register-service-worker": "^1.7.1",
