--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@point-hub/vue-cookie": "^0.1.1",
     "@point-hub/vue-google-maps": "^0.1.3",
+    "add": "^2.0.6",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.4",
@@ -21,6 +22,7 @@
     "register-service-worker": "^1.7.1",
     "socket.io-client": "^3.1.0",
     "vue": "^3.0.0",
+    "vue-gtag-next": "^1.14.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
     "yarn": "^1.22.10"
