--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "register-service-worker": "^1.7.1",
     "socket.io-client": "^3.1.0",
     "vue": "^3.0.0",
-    "vue-gtag-next": "^1.14.0",
+    "vue-gtag": "^2.0.1",
     "vue-router": "^4.0.0-0",
     "vue3-recaptcha2": "^1.2.0",
     "vuex": "^4.0.0-0",
