--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "@point-hub/checkin",
-  "version": "0.4.27",
+  "version": "0.5.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "serve:https": "vue-cli-service serve --https",
-    "build": "yarn;vue-cli-service build --dest build/0.4.27",
+    "build": "yarn;vue-cli-service build --dest build/0.5.1",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@point-hub/vue-cookie": "^0.1.1",
-    "@point-hub/vue-google-maps": "^0.1.3",
     "add": "^2.0.6",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.4",
+    "leaflet": "^1.7.1",
     "lodash": "^4.17.20",
     "mobile-device-detect": "^0.4.3",
     "register-service-worker": "^1.7.1",
